<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding_20"
    android:paddingStart="@dimen/padding_30"
    android:paddingEnd="@dimen/padding_30"
    tools:context=".presentation.fragment.phone.PhoneFragment">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:fontFamily="@font/inter_semibold"
        android:letterSpacing="-0.04"
        android:text="@string/phone_number_authentication_header"
        android:textColor="@color/default_header_text"
        android:textSize="@dimen/font_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerSubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:fontFamily="@font/inter_regular"
        android:letterSpacing="-0.04"
        android:text="@string/phone_number_authentication_subtitle"
        android:textColor="@color/default_subtitle_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/countryCodeButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_50"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/button_input_bg"
        android:elevation="@dimen/margin_5"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/country_code"
        android:letterSpacing="-0.04"
        android:paddingStart="@dimen/padding_20"
        android:paddingEnd="@dimen/padding_20"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:textColorHint="@color/default_input_text_hint"
        android:textSize="@dimen/font_14"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_world"
        app:iconGravity="start"
        app:iconPadding="@dimen/padding_14"
        app:iconTint="@color/default_ic_bg_passive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerSubtitleText" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_50"
        android:layout_marginTop="@dimen/margin_12"
        android:background="@drawable/button_input_bg"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="@dimen/padding_14"
        android:drawableTint="@color/default_ic_bg_passive"
        android:elevation="@dimen/margin_5"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/phone"
        android:inputType="phone"
        android:letterSpacing="-0.04"
        android:paddingStart="@dimen/padding_20"
        android:paddingEnd="@dimen/padding_20"
        android:textColor="@color/default_input_text_active"
        android:textColorHint="@color/default_input_text_hint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryCodeButton" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_marginBottom="@dimen/margin_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendCodeButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_50"
            android:layout_marginTop="@dimen/margin_14"
            android:background="@drawable/button_default_bg"
            android:elevation="@dimen/margin_10"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing="-0.04"
            android:paddingStart="@dimen/padding_20"
            android:paddingEnd="@dimen/padding_20"
            android:text="@string/send_verification_code"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/font_14"
            app:backgroundTint="@null" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


