<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding_30"
    tools:context=".presentation.fragment.login.SignInFragment">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:fontFamily="@font/inter_semibold"
        android:letterSpacing="-0.04"
        android:text="@string/enter_your_password"
        android:textColor="@color/default_header_text"
        android:textSize="@dimen/font_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_55"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/edit_text_input_background"
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_show_password"
        android:drawablePadding="@dimen/padding_14"
        android:drawableTint="@color/default_ic_bg_passive"
        android:elevation="@dimen/margin_5"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:letterSpacing="-0.04"
        android:paddingStart="@dimen/padding_20"
        android:paddingEnd="@dimen/padding_20"
        android:textColor="@color/default_input_text_active"
        android:textColorHint="@color/default_input_text_hint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:helperText="@string/get_started"
        app:helperTextEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_show_password"
        app:helperTextTextColor="@color/white"
        app:counterMaxLength="20"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/default_input_text_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_18"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.example.crewl.presentation.component.ProgressButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:textStyle="bold"
            app:header="@string/continueText"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


