<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding_30"
    tools:context=".presentation.fragment.login.MailFragment">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:fontFamily="@font/inter_semibold"
        android:letterSpacing="-0.04"
        android:text="@string/sign_in_with_mail"
        android:textColor="@color/default_header_text"
        android:textSize="@dimen/font_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.crewl.presentation.component.CustomEditText
        android:id="@+id/mailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        app:inputEndIcon="@drawable/ic_password"
        app:inputHint="@string/email"
        app:inputPasswordToggle="false"
        app:inputStartIcon="@drawable/ic_mail"
        app:inputTextType="email"
        app:fontSize="14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_4"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/termsOfServiceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/margin_6" />

        <com.example.crewl.presentation.component.ProgressButton
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsOfServiceText"
            android:layout_marginTop="@dimen/margin_14"
            app:header="@string/continueText"
            app:textStyle="bold" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/continueButton"
            android:layout_marginTop="@dimen/margin_14"
            android:gravity="center"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


